# HOG_Human_Detection

./: .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  dependencies.sh  doxygen  readme.md
.metadata/: version.ini
app/: Box.cpp  CMakeLists.txt  Camera.cpp  Detection.cpp  Human.cpp  Tracker.cpp  main.cpp
docs/: Human_Detection.conf
docs/html/: AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h_source.html  AVX512_2TypeCasting_8h_source.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h_source.html  AVX_2TypeCasting_8h_source.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h_source.html  AmbiVector_8h_source.html  Amd_8h_source.html  AngleAxis_8h_source.html  ArithmeticSequence_8h_source.html  ArrayBase_8h_source.html  ArrayCwiseBinaryOps_8h_source.html  ArrayCwiseUnaryOps_8h_source.html  ArrayWrapper_8h_source.html  Array_8h_source.html  AssignEvaluator_8h_source.html  Assign_8h_source.html  Assign__MKL_8h_source.html  AssignmentFunctors_8h_source.html  BDCSVD_8h_source.html  BFloat16_8h_source.html  BandMatrix_8h_source.html  BasicPreconditioners_8h_source.html  BiCGSTAB_8h_source.html  BinaryFunctors_8h_source.html  BlasUtil_8h_source.html  BlockHouseholder_8h_source.html  BlockMethods_8h_source.html  Block_8h_source.html  BooleanRedux_8h_source.html  BoxTest_8cpp.html  Box_8cpp.html  Box_8h.html  Box_8h_source.html  CUDA_2Complex_8h_source.html  Camera_8cpp.html  Camera_8hpp.html  (+6071 more)
docs/latex/: AVX512_2Complex_8h_source.tex  AVX512_2PacketMath_8h_source.tex  AVX512_2TypeCasting_8h_source.tex  AVX_2Complex_8h_source.tex  AVX_2PacketMath_8h_source.tex  AVX_2TypeCasting_8h_source.tex  AlignedBox_8h_source.tex  AltiVec_2Complex_8h_source.tex  AltiVec_2PacketMath_8h_source.tex  AmbiVector_8h_source.tex  Amd_8h_source.tex  AngleAxis_8h_source.tex  ArithmeticSequence_8h_source.tex  ArrayBase_8h_source.tex  ArrayCwiseBinaryOps_8h_source.tex  ArrayCwiseUnaryOps_8h_source.tex  ArrayWrapper_8h_source.tex  Array_8h_source.tex  AssignEvaluator_8h_source.tex  Assign_8h_source.tex  Assign__MKL_8h_source.tex  AssignmentFunctors_8h_source.tex  BDCSVD_8h_source.tex  BFloat16_8h_source.tex  BandMatrix_8h_source.tex  BasicPreconditioners_8h_source.tex  BiCGSTAB_8h_source.tex  BoxTest_8cpp.tex  (+3855 more)
include/: Box.h  Box.hpp  Camera.hpp  Detection.hpp  Human.h  Human.hpp  Tracker.h
test/: BoxTest.cpp  CMakeLists.txt  Camera_test.cpp  Cameratest.cpp  DetectionTest.cpp  Detection_test.cpp  HumanTest.cpp  main.cpp
(+129 files in other folders)
